# lso

./: .buildinfo  .bumpversion.cfg  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  .vale.ini  404.html  Changelog.md  Dockerfile  Dockerfile.example  Jenkinsfile  LICENSE  LICENSE.txt  README.md  ansible-galaxy-requirements.yaml  build-docs.sh  compose.yaml.example  config.json.example  env.example  genindex.html  index.html  mkdocs.yml  modules.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  requirements.txt  search.html  search.json  searchindex.js  setup.py  sitemap.xml  sonar.properties  tox.ini  zensical.toml
.doctrees/: environment.pickle  index.doctree  modules.doctree  quickstart.doctree
.doctrees/module/: config.doctree  execute.doctree  playbook.doctree
.doctrees/module/routes/: default.doctree  execute.doctree  index.doctree  playbook.doctree
.github/styles/config/vocabularies/jargon/: accept.txt
.github/workflows/: lint-docs.yaml  publish-docs.yaml  publish-package.yaml  run-doc-linting.yaml  run-linting-tests.yaml  run-unit-tests.yaml  sphinx.yaml
_sources/: index.rst.txt  modules.rst.txt  quickstart.rst.txt
_sources/module/: config.rst.txt  playbook.rst.txt
_sources/module/routes/: execute.rst.txt  index.rst.txt
_static/: custom.css
ansible_api/: __init__.py  app.py  config.py
ansible_api/routes/: default.py  playbook.py
contributing/: index.html
docker/: Dockerfile  app-run.sh  docker-start.sh  docker-stop.sh  index.html
docs/: .gitlab-ci.yml  contributing.md  docker.md  dump-openapi-spec.py  executors.md  index.md  installation.md
docs/css/: extra.css
docs/executables/: callback.md  index.md  parameters.md
docs/playbooks/: callback.md  index.md  parameters.md  updates.md
docs/source/: conf.py  index.rst  modules.rst  quickstart.rst
docs/source/_static/: custom.css
docs/source/module/: execute.rst  playbook.rst
docs/source/module/routes/: default.rst  index.rst  ip_trunk.rst  playbook.rst  router.rst
docs/source/static/: openapi.html
docs/vale/: .vale.ini
docs/vale/styles/Vocab/Sphinx/: accept.txt
docs/vale/styles/Vocab/geant-jargon/: accept.txt
docs/vale/styles/config/vocabularies/geant-jargon/: accept.txt
executables/: index.html
executables/callback/: index.html
executables/parameters/: index.html
executors/: index.html
includes/: abbreviations.md
includes/abbreviations/: index.html
installation/: index.html
larp/: __init__.py  app.py  config.py  environment.py  run_playbook.sh
larp/routes/: default.py  playbook.py
lso/: __init__.py  app.py  config.py  environment.py  execute.py  playbook.py  run_playbook.sh  schema.py  tasks.py  utils.py  worker.py
lso/routes/: __init__.py  common.py  default.py  device.py  execute.py  ip_trunk.py  playbook.py  router.py
module/: config.html  execute.html  playbook.html
module/routes/: default.html  execute.html  index.html  playbook.html
playbooks/: index.html
playbooks/callback/: index.html
playbooks/parameters/: index.html
playbooks/updates/: index.html
test/: __init__.py  conftest.py  playbook.yml  test-playbook.yaml  test_ansible.py  test_config.py  test_create_venv.py  test_device_routes.py  test_execute.py  test_playbook.py  test_playbook_utils.py  utils.py
test/routes/: __init__.py  test_default.py  test_device.py  test_execute.py  test_ip_trunk.py  test_playbook.py  test_router.py
