[project]
name = "orchestrator-lso"
version = "3.0.0"
description = "LSO, an API for remotely running Ansible playbooks."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12,<3.15"
authors = [
    {name = "GÉANT Orchestration and Automation Team", email = "goat@geant.org"}
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: Telecommunications Industry",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "ansible==13.5.0",
    "ansible-runner==2.4.3",
    "celery==5.6.3",
    "fastapi==0.135.3",
    "httpx==0.28.1",
    "pydantic-settings==2.13.1",
    "redis==7.4.0",
    "requests==2.33.1",
    "uvicorn[standard]==0.44.0",
]

[project.urls]
Homepage = "https://workfloworchestrator.org/"
Documentation = "https://workfloworchestrator.org/lso"
Source = "https://github.com/workfloworchestrator/lso"

[dependency-groups]
dev = [
    "bumpversion",
    "pytest",
    "pytest-cov",
    "Faker",
    "responses",
    "ruff",
    "jsonschema",
    "starlette",
    "types-setuptools",
    "types-requests",
    "toml",
    "types-toml",
    "pre-commit>=4.3.0",
    "ty>=0.0.29",
]

docs = [
    "mkdocstrings-python>=2.0.3",
    "vale>=3.13.0.0",
    "zensical>=0.0.32",
]

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.10.12,<0.12.0"]

[tool.uv]
prerelease = "if-necessary"

[tool.uv.build-backend]
module-name = "lso"
module-root = ""

[tool.ty]
src.exclude = [
    "venv",
    "**/test/**",
    "docs"
]

[tool.ruff]
extend-exclude = ["docs"]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
ignore = [
    "COM812",
    "D203",
    "D213",
    "N805",
    "PLR0904",
    "PLR0913",
    "PLR0917",
    "PLW1514",
    "S104"
]
select = [
    "A",
    "ARG",
    "B",
    "BLE",
    "C",
    "COM",
    "C4",
    "C90",
    "D",
    "DTZ",
    "E",
    "EM",
    "ERA",
    "F",
    "FA",
    "FBT",
    "FLY",
    "FURB",
    "G",
    "I",
    "ICN",
    "INP",
    "ISC",
    "LOG",
    "N",
    "PERF",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "R",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "T",
    "T20",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT"
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"test/*" = ["D", "S101"]


[tool.ruff.lint.isort]
known-third-party = []
known-first-party = ["test", "docs"]
